# idotmatrix-bitcoin-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: btc_live.py  debug_protocol.py  run_demo.py  scan.py  test_connection.py  test_image.py
src/: config.py  main.py  webhook.py
src/ble/: __init__.py  client.py  scanner.py
src/data/: __init__.py  agents.py  bitcoin.py
src/modes/: __init__.py  alert.py  status.py  ticker.py
src/protocol/: __init__.py  chunks.py  commands.py
src/render/: __init__.py  colors.py  dashboard.py  pixel_font.py  text.py
tests/: test_agents.py  test_bitcoin.py  test_chunks.py  test_commands.py  test_render.py
