[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "led-matrix-dashboard"
version = "0.1.0"
description = "iDotMatrix LED pixel display controller via BLE"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
led-dashboard = "src.main:run"
led-scan = "scripts.scan:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
